[FIX] website: allow elements to overflow fixed parallax
Parallax elements are overflow:hidden so that their moving background
does not overflow. This introduces a limitation: no dropdown can
overflow the snippet either.

While a better solution should be found in master, this allows overflow
for the "fixed" parallax which does not use an overflowing background.

opw-2091324

closes odoo/odoo#41488

X-original-commit: 72d3b0161a87dc28049e6595827ce60de998709e

--- a/addons/website/static/src/scss/website.scss
+++ b/addons/website/static/src/scss/website.scss
@@ -921,7 +921,6 @@ table.table_desc tr td {
 // Parallax
 .parallax {
     position: relative;
-    overflow: hidden;
 
     > * {
         position: relative;
